--- a/htmlFile/index.html
+++ b/htmlFile/index.html
@@ -21,8 +21,8 @@
             <img src="./6.jpeg" alt="char6" />
             <img src="./7.jpeg" alt="char8" />
             <img src="./8.jpeg" alt="char12" />
-            <img src="./9.jpeg" alt="char7" />
-            <img src="./10.jpeg" alt="char9" />
+            <img src="./9.jpg" alt="char7" />
+            <img src="./10.jpg" alt="char9" />
             <img src="./11.jpeg" alt="char10" />
             <img src="./12.jpeg" alt="char2" />
             </div>
